2010-01-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.RcppMatrix.R: added
	* inst/unitTests/runit.RcppMatrixView.R: added
	* inst/unitTests/runit.RcppVector.R: added
	* inst/unitTests/runit.RcppVectorView.R: added

2010-01-27  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/CharacterVector.h: CharacterVector gains a default
	constructor

	* src/Rcpp/CharacterVector.h: CharacterVector gains range
	constructors and range based assign methods facilitating
	construction from iterators

	* inst/unitTests/runit.CharacterVector.R: unit tests for assign
	and range based constructors

	* src/Rcpp/CharacterVector.h: CharacterVector::StringProxy
	gets a printing operator <<(std::ostream& )

	* src/Rcpp/Environment.h: removed the static
	Environment::RCPP_NAMESPACE which caused problems when
	embedding R

	* src/Rcpp/RObject.h: RObject::AttributeProxy::operator RObject
	replaced by templated implicit conversion operator, delegating the
	actual work to as<>.

	* src/Environment.h: Binding::operator RObject is removed since
	it can be automatically generated by the templated implicit
	conversion operator

	* man/RcpUnitTests.Rd: fix html rendering

	* inst/doc/Makefile: clean the index.html file before copying it

2010-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDatetime.cpp: New SEXP-based constructor
	* src/RcppDatetime.h: idem, bug fix for operator-

	* src/RcppDate.h: new accessor getJulian() [relative to epoch
	  just like R's julian()] to complement getJDN()

	* inst/unitTests/runit.RcppDatetime.R: added

2010-01-26  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/clone.h: explicit cloning of RObjects. The clone
	template function creates a new object of the same class
	as the object it is passed in, encapsulating a duplicate
	of the SEXP contained by the input RObject.

	* src/Rcpp/r_cast.h: new template function to handle casts
	from one SEXP to another. This is mostly useful internally
